--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.14",
     "morgan": "~1.9.0",
+    "node-schema-validator": "^2.0.0",
     "pug": "2.0.0-beta11"
   }
 }
